Jan 2018 tour dates

--- a/_data/calendar.yml
+++ b/_data/calendar.yml
@@ -770,4 +770,34 @@
   - date: 2017-12-29
     time: 7:30pm
     title: House concert (contact Tim for more details)
-    location: "New Castle, DE"
+    location: "Wilmington, DE"
+
+  - date: 2018-01-13
+    time: 7pm
+    title: "[UChicago Contra Dance](https://www.facebook.com/events/136127633726818/)"
+    location: "Ida Noyes Hall, University of Chicago"
+
+  - date: 2018-01-17
+    time: 8:30pm
+    title: "[World Music Wednesday](http://www.oldtownschool.org/concerts/2018/01-24-2018-wmw-jaerv-with-special-guests-tim-macdonald-and-jeremy-ward/)"
+    location: "Old Town School of Folk Music, 4545 N Lincoln Ave, Chicago, IL"
+
+  - date: 2018-01-20
+    time: 7pm
+    title: "[New Year's Ball, RSCDS-Chicago](https://rscdschicago.wordpress.com/special-events/)"
+    location: "Baker Community Center, St. Charles, IL"
+
+  - date: 2018-01-21
+    time: 11:30am
+    title: "[New Year's Tea Dance, RSCDS-Chicago](https://rscdschicago.wordpress.com/special-events/)"
+    location: "Baker Community Center, St. Charles, IL"
+
+  - date: 2018-01-22
+    time: 7pm
+    title: "Contra Dance"
+    location: "[The Irish American Heritage Center](http://irish-american.org/), Chicago, IL"
+
+  - date: 2018-01-29
+    time: 7pm
+    title: "[English country dance](https://chicagolandecd.org/local-dancing/oak-park-ecd/)"
+    location: "[The Nineteenth Century Club](http://www.nineteenthcentury.org/), 178 Forest Ave., Oak Park, IL"
