--- a/_data/calendar.yml
+++ b/_data/calendar.yml
@@ -777,6 +777,11 @@
     title: "[UChicago Contra Dance](https://www.facebook.com/events/136127633726818/)"
     location: "Ida Noyes Hall, University of Chicago"
 
+  - date: 2018-01-16
+    time: 7pm
+    title: "[Chicago Scottish Jam](/jamming)"
+    location: "[The Duke of Perth](http://www.dukeofperth.com/), Chicago, IL"
+
   - date: 2018-01-17
     time: 8:30pm
     title: "[World Music Wednesday](http://www.oldtownschool.org/concerts/2018/01-24-2018-wmw-jaerv-with-special-guests-tim-macdonald-and-jeremy-ward/)"
@@ -801,3 +806,201 @@
     time: 7pm
     title: "[English country dance](https://chicagolandecd.org/local-dancing/oak-park-ecd/)"
     location: "[The Nineteenth Century Club](http://www.nineteenthcentury.org/), 178 Forest Ave., Oak Park, IL"
+
+  - date: 2018-01-30
+    time: 7pm
+    title: "[Chicago Scottish Jam](/jamming)"
+    location: "[The Duke of Perth](http://www.dukeofperth.com/), Chicago, IL"
+
+  - date: 2018-02-02
+    time: 8pm
+    title: "[Contra Dance](http://www.urbana-contra.org/sched_spring.html)"
+    location: Urbana, IL
+
+  - date: 2018-02-03
+    time: 2:30pm
+    title: "Historic music demonstration at [Military History Fest](http://www.reenactorfest.com/)"
+    location: St. Charles, IL
+
+  - date: 2018-02-04
+    time: 2pm
+    title: "[Around Town Concert Series](https://www.musicinst.org/around-town-series)"
+    location: Music Institute of Chicago, Lake Forest, IL
+
+  - date: 2018-02-05
+    time: 7pm
+    title: "[House Concert](https://www.facebook.com/events/586168538391194/)"
+    location: Pembroke, VA
+
+  - date: 2018-02-06
+    time: 1:30pm
+    title: "Concert at [Penick Village](https://www.penickvillage.org/)"
+    location: Southern Pines, NC
+
+  - date: 2018-02-07
+    time: 6:30pm
+    title: "[Fiddling for Fort Dobbs](https://www.facebook.com/events/258881967980800/)"
+    location: Southern Distilling Company, Statesville, NC
+
+  - date: 2018-02-08
+    time: 12:40pm
+    title: "World Music Guest Lecture"
+    location: High Point University, High Point, NC
+
+  - date: 2018-02-09
+    time: 7pm
+    title: "House Concert"
+    location: Beaver Dam, VA
+
+  - date: 2018-02-10
+    time: 7pm
+    title: "[Concert at Big Lick Brewing](https://www.facebook.com/events/380605889031201/)"
+    location: Roanoke, VA
+
+  - date: 2018-02-11
+    time: 7pm
+    title: "House Concert"
+    location: Medina, OH
+
+  - date: 2018-02-12
+    time: 7pm
+    title: "[Concert at the Standing Rock Art Gallery](https://www.facebook.com/events/1337987626301837/)"
+    location: Kent, OH
+
+  - date: 2018-02-19
+    time: 7pm
+    title: "[English Country Dance in Honor of Ignatius Sancho](https://chicagolandecd.org/local-dancing/oak-park-ecd/)"
+    location: Oak Park, IL
+
+  - date: 2018-02-27
+    time: 2pm
+    title: "World Music Guest Lecture"
+    location: Northwestern University, Evanston, IL
+
+  - date: 2018-02-27
+    time: 7pm
+    title: "[Chicago Scottish Jam](/jamming)"
+    location: "[The Duke of Perth](http://www.dukeofperth.com/), Chicago, IL"
+
+  - date: 2018-03-13
+    time: 7pm
+    title: "[Chicago Scottish Jam](/jamming)"
+    location: "[The Duke of Perth](http://www.dukeofperth.com/), Chicago, IL"
+
+  - date: 2018-03-14
+    time: 7pm
+    title: "St. Patrick's Day Concert with Old Lazarus' Harp"
+    location: "[Paddy O'Fegan's](http://paddyofegans.com/), Chicago, IL"
+
+  - date: 2018-03-16
+    time: 9am
+    title: "St. Patrick's Day Concert with Old Lazarus' Harp"
+    location: "Private Event, Chicago, IL"
+
+  - date: 2018-03-16
+    time: 9am
+    title: "St. Patrick's Day Concert with Old Lazarus' Harp"
+    location: "Private Event, Chicago, IL"
+
+  - date: 2018-03-16
+    time: 7pm
+    title: "[Ceòl Mòr: Laments for Solo Fiddle](https://www.facebook.com/events/181003132629021/)"
+    location: "Chicago, IL"
+
+  - date: 2018-03-17
+    time: 7pm
+    title: "St. Patrick's Day Concert with Old Lazarus' Harp"
+    location: "CD & Me, Frankfort, IL"
+
+  - date: 2018-03-24
+    time:
+    title: "Historic Music Demonstration"
+    location: "Hancock House, Salem, NJ"
+
+  - date: 2018-03-24
+    time: 7pm
+    title: "Dancing Master for a Publick Ball"
+    location: "Hancock House, Salem, NJ"
+
+  - date: 2018-03-27
+    time: 7pm
+    title: "[Chicago Scottish Jam](/jamming)"
+    location: "[The Duke of Perth](http://www.dukeofperth.com/), Chicago, IL"
+
+  - date: 2018-03-30
+    time: 5:30pm
+    title: "The Stations of the Cross"
+    location: "KB Studio, Chicago, IL"
+
+  - date: 2018-04-03
+    time: 7pm
+    title: "Tartan Day Celebration"
+    location: "[The Duke of Perth](http://www.dukeofperth.com/), Chicago, IL"
+
+  - date: 2018-04-10
+    time: 7pm
+    title: "[Chicago Scottish Jam](/jamming)"
+    location: "[The Duke of Perth](http://www.dukeofperth.com/), Chicago, IL"
+
+  - date: 2018-04-12
+    time: 7pm
+    title: "Improvisation Workshop"
+    location: "Wheaton Conservatory of Music, Wheaton, IL"
+
+  - date: 2018-04-24
+    time: 7pm
+    title: "[Chicago Scottish Jam](/jamming)"
+    location: "[The Duke of Perth](http://www.dukeofperth.com/), Chicago, IL"
+
+  - date: 2018-04-29
+    time: 7pm
+    title: "[House Concert with Dick Hensold](https://www.facebook.com/events/1375796102520801)"
+    location: "Chicago, IL"
+
+  - date: 2018-04-30
+    time: 7pm
+    title: "Contra Dance with Dick Hensold"
+    location: "[The Irish American Heritage Center](http://irish-american.org/), Chicago, IL"
+
+  - date: 2018-05-08
+    time: 7pm
+    title: "[Chicago Scottish Jam](/jamming)"
+    location: "[The Duke of Perth](http://www.dukeofperth.com/), Chicago, IL"
+
+  - date: 2018-05-19
+    time: 12pm
+    title: "Scottish Country Dancing Demonstration"
+    location: "[Skokie Festival of Cultures](http://www.skokieculturefest.org/), Skokie, IL"
+
+  - date: 2018-05-19
+    time: 6:30pm
+    title: "[Queer Contra Dance with Emily Nott](https://www.facebook.com/events/192944168099118/)"
+    location: "Chicago, IL"
+
+  - date: 2018-06-01
+    time: 7:30pm
+    title: "[Kirk and a Sesh](http://bbexperience.org/kirkandasesh) with the BBE"
+    location: "Old Town School of Folk Music, Chicago, IL"
+
+  - date: 2018-06-06
+    time: 7pm
+    title: "[Kirk and a Sesh](http://bbexperience.org/kirkandasesh) with the BBE"
+    location: "St. Luke's Episcopal Church, Evanston, IL"
+
+  - date: 2018-06-15
+    time: 8pm
+    title: "[Newberry Violin Band at Music in the Mountains](https://www.mountainsidebaroque.org/schedule)"
+    location: "Cumberland, MD"
+
+  - date: 2018-06-17
+    time: 3pm
+    title: "[*Alexander's Feast* at Music in the Mountains](https://www.mountainsidebaroque.org/schedule)"
+    location: "Cumberland, MD"
+
+  - date: 2018-07-11
+    title: "Paper Presentation: \"Strathspeys, Reels, and Strathspey-Reels: Clarifying Country Dance Music in Lowland Scotland 1750-1833\""
+    location: "[NAFCo](https://www.abdn.ac.uk/nafco/), Aberdeen, Scotland"
+
+  - date: 2018-07-29
+    title: "Instructor at [The Jink and Diddle School of Scottish Fiddling](http://www.jinkdiddle.com/)"
+    location: Valle Crucis, NC
