Yay Aug2018 tour

--- a/_data/calendar.yml
+++ b/_data/calendar.yml
@@ -1004,3 +1004,38 @@
   - date: 2018-07-29
     title: "Instructor at [The Jink and Diddle School of Scottish Fiddling](http://www.jinkdiddle.com/)"
     location: Valle Crucis, NC
+
+  - date: 2018-08-10
+    time: 7pm
+    title: "[House Concert](https://www.facebook.com/events/206269446892048/) (RSVP to tim@timandjeremy.com)"
+    location: "Chicago, IL"
+
+  - date: 2018-08-16
+    time: 7:30pm
+    title: "[House Concert](https://www.facebook.com/events/865074733703253/) (RSVP to gailhmacdonald@verizon.net)"
+    location: "Sewickley, PA (near Pittsburgh)"
+
+  - date: 2018-08-17
+    time: 7:30pm
+    title: "Concert at the Hamlin Street Diner"
+    location: "Washington, DC"
+
+  - date: 2018-08-19
+    time: 7pm
+    title: "[House Concert and Jam](https://www.facebook.com/events/206269446892048/) (RSVP to jeansvan@gmail.com)"
+    location: "Middlebury, VT"
+
+  - date: 2018-08-20
+    time: 7pm
+    title: "[House Concert](https://www.facebook.com/events/283379118893922/) (RSVP to quakeryousay@gmail.com)"
+    location: "Montpelier, VT"
+
+  - date: 2018-08-22
+    time: 7pm
+    title: "[Concert and Barn Dance with piper Peter Walker](https://www.facebook.com/events/273115113481132/) (RSVP to jewalker@vassar.edu)"
+    location: "Hyde Park, NY"
+
+  - date: 2018-09-01
+    time: 2pm
+    title: "[Country Dancing at the Midwest Sing & Stomp](http://singandstomp.com/)"
+    location: "Chicago, IL"
