it is good to have gigs

--- a/_data/calendar.yml
+++ b/_data/calendar.yml
@@ -1039,3 +1039,23 @@
     time: 2pm
     title: "[Country Dancing at the Midwest Sing & Stomp](http://singandstomp.com/)"
     location: "Chicago, IL"
+
+  - date: 2018-10-05
+    time: 7pm
+    title: "*Summer's End* house concert, with [Brandon Acker](http://brandonackerguitar.com/). (RSVP to tim@timandjeremy.com for details.)"
+    location: "Chicago, IL"
+
+  - date: 2018-10-19
+    time: 8pm
+    title: "*Will Kemp Returns*, Elizabethan jigs with [The Newberry Consort](https://newberryconsort.org/). Intermission show: Tim & Jeremy play wild airs frae the North"
+    location: "Ruggles Hall, The Newberry Library, Chicago, IL"
+
+  - date: 2018-10-20
+    time: 8pm
+    title: "*Will Kemp Returns*, Elizabethan jigs with [The Newberry Consort](https://newberryconsort.org/). Intermission show: Tim & Jeremy play wild airs frae the North"
+    location: "The International House, University of Chicago, Chicago, IL"
+
+  - date: 2018-10-21
+    time: 3pm
+    title: "*Will Kemp Returns*, Elizabethan jigs with [The Newberry Consort](https://newberryconsort.org/). Intermission show: Tim & Jeremy play wild airs frae the North"
+    location: "Galvin Hall, Northwestern University, Chicago, IL"
