--- a/_data/calendar.yml
+++ b/_data/calendar.yml
@@ -1059,3 +1059,38 @@
     time: 3pm
     title: "*Will Kemp Returns*, Elizabethan jigs with [The Newberry Consort](https://newberryconsort.org/). Intermission show: Tim & Jeremy play wild airs frae the North"
     location: "Galvin Hall, Northwestern University, Chicago, IL"
+
+  - date: 2018-11-30
+    time: 6pm
+    title: "St. Andrew's Day"
+    location: "[Balmoral Restaurant](http://www.balmoralrestaurant.com/), Campton Hills, IL"
+
+  - date: 2018-12-07
+    time: 7pm
+    title: "Concert: [To Drive the Cold Winter Away](https://www.semanviolins.com/events/2018/12/7/tim-macdonald-amp-jeremy-ward-concert)"
+    location: "Seman Violins, 4447 Oakton St, Skokie, IL"
+
+  - date: 2018-12-07
+    time: 7pm
+    title: "Music demonstration during the [march-in of the Continental Army](https://www.valleyforge.org/revolution/events/march-in/)"
+    location: "Valley Forge National Historic Park, King of Prussia, PA"
+
+  - date: 2018-12-30
+    time: 7pm
+    title: "House concert (contact me for details)"
+    location: "Arden, DE"
+
+  - date: 2018-12-31
+    time: 8pm
+    title: "[Hogmanay Ball](http://www.delvalscottishdance.org/wp-content/uploads/2018/11/Hogmanay-flyer-2018.pdf) (with Jeremy Ward and Dave Wiesler)"
+    location: "Germantown Friends School Field House, Philadelphia, PA"
+
+  - date: 2020-01-19
+    time: 7pm
+    title: "[New Year's Ball](https://rscdschicago.org/special-events/) (with Jeremy Ward)"
+    location: "Baker Community Center, St. Charles, IL"
+
+  - date: 2020-01-20
+    time: 3pm
+    title: "[New Year's Tea Dance](https://rscdschicago.org/special-events/) (with Jeremy Ward)"
+    location: "Baker Community Center, St. Charles, IL"
