--- a/_data/calendar.yml
+++ b/_data/calendar.yml
@@ -1045,6 +1045,16 @@
     title: "*Summer's End* house concert, with [Brandon Acker](http://brandonackerguitar.com/). (RSVP to tim@timandjeremy.com for details.)"
     location: "Chicago, IL"
 
+  - date: 2018-10-09
+    time: 7pm
+    title: "[Chicago Scottish Jam](/jamming)"
+    location: "[The Duke of Perth](http://www.dukeofperth.com/), Chicago, IL"
+
+  - date: 2018-10-16
+    time: 7pm
+    title: "[Chicago Scottish Jam](/jamming)"
+    location: "[The Duke of Perth](http://www.dukeofperth.com/), Chicago, IL"
+
   - date: 2018-10-19
     time: 8pm
     title: "*Will Kemp Returns*, Elizabethan jigs with [The Newberry Consort](https://newberryconsort.org/). Intermission show: Tim & Jeremy play wild airs frae the North"
@@ -1060,6 +1070,21 @@
     title: "*Will Kemp Returns*, Elizabethan jigs with [The Newberry Consort](https://newberryconsort.org/). Intermission show: Tim & Jeremy play wild airs frae the North"
     location: "Galvin Hall, Northwestern University, Chicago, IL"
 
+  - date: 2018-10-30
+    time: 7pm
+    title: "[Chicago Scottish Jam](/jamming)"
+    location: "[The Duke of Perth](http://www.dukeofperth.com/), Chicago, IL"
+
+  - date: 2018-11-13
+    time: 7pm
+    title: "[Chicago Scottish Jam](/jamming)"
+    location: "[The Duke of Perth](http://www.dukeofperth.com/), Chicago, IL"
+
+  - date: 2018-11-27
+    time: 7pm
+    title: "[Chicago Scottish Jam](/jamming)"
+    location: "[The Duke of Perth](http://www.dukeofperth.com/), Chicago, IL"
+
   - date: 2018-11-30
     time: 6pm
     title: "St. Andrew's Day"
@@ -1070,8 +1095,13 @@
     title: "Concert: [To Drive the Cold Winter Away](https://www.semanviolins.com/events/2018/12/7/tim-macdonald-amp-jeremy-ward-concert)"
     location: "Seman Violins, 4447 Oakton St, Skokie, IL"
 
-  - date: 2018-12-07
+  - date: 2018-12-11
     time: 7pm
+    title: "[Chicago Scottish Jam](/jamming)"
+    location: "[The Duke of Perth](http://www.dukeofperth.com/), Chicago, IL"
+
+  - date: 2018-12-19
+    time: 6pm
     title: "Music demonstration during the [march-in of the Continental Army](https://www.valleyforge.org/revolution/events/march-in/)"
     location: "Valley Forge National Historic Park, King of Prussia, PA"
 
