--- a/_data/calendar.yml
+++ b/_data/calendar.yml
@@ -1106,7 +1106,7 @@
     location: "Valley Forge National Historic Park, King of Prussia, PA"
 
   - date: 2018-12-30
-    time: 7pm
+    time: 4pm
     title: "House concert (contact me for details)"
     location: "Arden, DE"
 
@@ -1115,12 +1115,17 @@
     title: "[Hogmanay Ball](http://www.delvalscottishdance.org/wp-content/uploads/2018/11/Hogmanay-flyer-2018.pdf) (with Jeremy Ward and Dave Wiesler)"
     location: "Germantown Friends School Field House, Philadelphia, PA"
 
-  - date: 2020-01-19
+  - date: 2019-01-19
     time: 7pm
     title: "[New Year's Ball](https://rscdschicago.org/special-events/) (with Jeremy Ward)"
     location: "Baker Community Center, St. Charles, IL"
 
-  - date: 2020-01-20
+  - date: 2019-01-20
     time: 3pm
     title: "[New Year's Tea Dance](https://rscdschicago.org/special-events/) (with Jeremy Ward)"
     location: "Baker Community Center, St. Charles, IL"
+
+  - date: 2019-01-24
+    time: 6:30pm
+    title: "[Global Neighbors: Scotland](http://gailbweb.gailborden.info/evanced/lib/eventsignup.asp?ID=51190&rts=&disptype=&ret=eventcalendar.asp&pointer=&returnToSearch=&num=0&ad=&dt=mo&mo=1/1/2019&df=calendar&EventType=ALL&Lib=ALL&AgeGroup=Adults%2C+All+ages&LangType=0&WindowMode=&noheader=&lad=&pub=1&nopub=&page=&pgdisp=)"
+    location: "Gail Borden Public Library, 270 N. Grove Ave. Elgin, IL "
