--- a/_data/calendar.yml
+++ b/_data/calendar.yml
@@ -1115,6 +1115,11 @@
     title: "[Hogmanay Ball](http://www.delvalscottishdance.org/wp-content/uploads/2018/11/Hogmanay-flyer-2018.pdf) (with Jeremy Ward and Dave Wiesler)"
     location: "Germantown Friends School Field House, Philadelphia, PA"
 
+  - date: 2019-01-05
+    time: 7pm
+    title: "House concert with Jeremy Ward (contact me for details)"
+    location: "Chicago, IL"
+
   - date: 2019-01-19
     time: 7pm
     title: "[New Year's Ball](https://rscdschicago.org/special-events/) (with Jeremy Ward)"
@@ -1129,3 +1134,23 @@
     time: 6:30pm
     title: "[Global Neighbors: Scotland](http://gailbweb.gailborden.info/evanced/lib/eventsignup.asp?ID=51190&rts=&disptype=&ret=eventcalendar.asp&pointer=&returnToSearch=&num=0&ad=&dt=mo&mo=1/1/2019&df=calendar&EventType=ALL&Lib=ALL&AgeGroup=Adults%2C+All+ages&LangType=0&WindowMode=&noheader=&lad=&pub=1&nopub=&page=&pgdisp=)"
     location: "Gail Borden Public Library, 270 N. Grove Ave. Elgin, IL "
+
+  - date: 2019-01-25
+    time: 7pm
+    title: "Burns Night with the Bandicoots"
+    location: Balmoral Restaurant, Campton Hills, IL
+
+  - date: 2019-02-11
+    time: 7pm
+    title: "[Contra dance with the Bandicoots](http://www.chicagobarndance.org/ai1ec_event/contra-square-dance-2019-04-4-2-2-2-2-2-3-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-3-2-2-2-2-2/?instance_id=3589)"
+    location: Irish American Heritage Center, Chicago, IL
+
+  - date: 2019-02-09
+    time: 7pm
+    title: "Ceilidh with the Bandicoots for the [University of Glasgow Burns Supper, Chicago](https://www.alumni.gla.ac.uk/2019-chicago-burns-supper)"
+    location: University Club of Chicago, IL
+
+  - date: 2019-04-28
+    time: 5pm
+    title: "Fiddle performance with Jeremy Ward and [Rachel Barton Pine](https://rachelbartonpine.com/) for the [Illinois Symphony Gala](https://www.ilsymphony.org/concerts-events/new-york-city-trip-raffle/)"
+    location: Springfield, IL
