--- a/_data/calendar.yml
+++ b/_data/calendar.yml
@@ -1150,6 +1150,11 @@
     title: "Ceilidh with the Bandicoots for the [University of Glasgow Burns Supper, Chicago](https://www.alumni.gla.ac.uk/2019-chicago-burns-supper)"
     location: University Club of Chicago, IL
 
+  - date: 2019-03-02
+    time: 7pm
+    title: "Lenten house concert with Jeremy Ward and Emily Nott (contact me for details)"
+    location: "Chicago, IL"
+
   - date: 2019-04-28
     time: 5pm
     title: "Fiddle performance with Jeremy Ward and [Rachel Barton Pine](https://rachelbartonpine.com/) for the [Illinois Symphony Gala](https://www.ilsymphony.org/concerts-events/new-york-city-trip-raffle/)"
