The house concerts...

--- a/_data/calendar.yml
+++ b/_data/calendar.yml
@@ -1159,3 +1159,13 @@
     time: 5pm
     title: "Fiddle performance with Jeremy Ward and [Rachel Barton Pine](https://rachelbartonpine.com/) for the [Illinois Symphony Gala](https://www.ilsymphony.org/concerts-events/new-york-city-trip-raffle/)"
     location: Springfield, IL
+
+  - date: 2019-08-16
+    time: 7:30pm
+    title: "Tim and Jeremy: Even Wilder ([event link](https://www.facebook.com/events/2261730903946178/)). Contact me for details or to RSVP"
+    location: Uptown, Chicago, IL
+
+  - date: 2019-08-17
+    time: 7:30pm
+    title: "Tim and Jeremy: Even Wilder ([event link](https://www.facebook.com/events/372379433463453/)). Contact me for details or to RSVP"
+    location: Garfield Park, Chicago, IL
